--- a/index.html
+++ b/index.html
@@ -11,17 +11,58 @@
  
  <header class="cabeçalho">  
 
-<h1><img src="logo.png" alt=""></h1>
+<div class="caixa">
 
-<nav>
-<ul>
-    <li><a href="https://4n3g4sp4r0t0.github.io/Barbearia-Alura-Ane-Caroline-Gasparoto/">HOME</a></li>
-    <li><a>PRODUTOS</a></li>
-    <li><a>CONTATOS</a></li>
+    <h1><img src="logo.png" alt=""></h1>
 
-</ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="https://4n3g4sp4r0t0.github.io/Barbearia-Alura-Ane-Caroline-Gasparoto/">HOME</a></li>
+            <li><a href="">PRODUTOS</a></li>
+            <li><a href="">CONTATOS</a></li>
 
+        </ul>
+    </nav>
+
+</div>
+
+
+</header>
+
+<main>
+
+ <ul class="produtos">
+    <li>
+        
+        <h2>cabelo</h2>
+        <img src="cabelo.jpg" alt="">
+        <p>Na tesoura ou maquina, como o cliente 
+            preferir</p>
+            <p>R$25,00</p>
+
+    </li>
+
+
+
+<li>
+     <h2>barba</h2>
+        <img src="barba.jpg" alt="">
+        <p>Corte e desenho Profissional de barba</p>
+        <p>R$18,00</p>
+
+</li>
+
+
+   <li>
+        <h2>cabelo+barba</h2>
+        <img src="cabelo+barba.jpg" alt="">
+        <p>Pacote completo de cabelo e barba </p>
+        <p>R$35,00</p>
+
+    </li>
+    </ul>
+
+</main>
 
 </body>
 </html>
