--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         
         <h2>cabelo</h2>
         <img src="cabelo.jpg" alt="">
-        <p>Na tesoura ou maquina, como o cliente 
+        <p class="descrição">Na tesoura ou maquina, como o cliente 
             preferir</p>
-            <p>R$25,00</p>
+            <p class="preço">R$25,00</p>
 
     </li>
 
@@ -47,8 +47,8 @@
 <li>
      <h2>barba</h2>
         <img src="barba.jpg" alt="">
-        <p>Corte e desenho Profissional de barba</p>
-        <p>R$18,00</p>
+        <p class="descrição">Corte e desenho Profissional de barba</p>
+        <p class="preço">R$18,00</p>
 
 </li>
 
@@ -56,13 +56,19 @@
    <li>
         <h2>cabelo+barba</h2>
         <img src="cabelo+barba.jpg" alt="">
-        <p>Pacote completo de cabelo e barba </p>
-        <p>R$35,00</p>
+        <p class="descrição">Pacote completo de cabelo e barba  </p>
+        <p class="preço">R$35,00</p>
 
     </li>
     </ul>
 
 </main>
+
+<footer>
+    <img src="logo-branco.png" alt="">
+    <p class="rodapé">Copyright Barbearia-Alura-Home-Ane</p>
+
+</footer>
 
 </body>
 </html>
